# poker_research

./: .gitignore  CMakeLists.txt  MODEL_CARD.md  ai_evolved.cpp  ai_evolved.h  ai_rl.cpp  ai_rl.h  ai_rl.old.cp  ai_smart.cpp  checkpoint.cpp  checkpoint.h  converter.cpp  converter.h  converter.h.old  ga_dashboard.cpp  ga_dashboard.h  game.cpp  game.h  genetic_trainer.cpp  genetic_trainer.h  graphnn_converter.cpp  h.cpp  hfiles  host_silent.cpp  host_silent.h  host_terminal.cpp  info.cpp  info.h  m.cpp  main.cpp  no_comments.cpp  observer_dashboard.cpp  observer_dashboard.h  poker_model_epoch_0.pt  poker_net.h  pokermath.h  readme.txt
